// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when there are no items 1`] = `
<div
  className="chakra-stack css-1acfu01"
>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har ingen etablerte positive påvirkninger enda
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    />
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har ingen etablerte negative påvirkninger enda
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    />
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har ingen utviklingsområder
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    />
  </div>
</div>
`;

exports[`renders when there are one item 1`] = `
<div
  className="chakra-stack css-1acfu01"
>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har positiv virkning til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-12ybw9u"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
    </ul>
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har negativ virkning til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-mmukis"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
    </ul>
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har utviklingsområde til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-17izuiz"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
    </ul>
  </div>
</div>
`;

exports[`renders when there are two items 1`] = `
<div
  className="chakra-stack css-1acfu01"
>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har positiv virkning til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-12ybw9u"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
      <button
        className="chakra-button css-aqssaa"
        onClick={[Function]}
        type="button"
      >
        heihei
      </button>
    </ul>
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har negativ virkning til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-mmukis"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
      <button
        className="chakra-button css-yxu8t1"
        onClick={[Function]}
        type="button"
      >
        heihei
      </button>
    </ul>
  </div>
  <b
    className="chakra-text css-1ezsviu"
  >
    Har utviklingsområde til:
  </b>
  <div
    className="chakra-wrap css-0"
  >
    <ul
      className="chakra-wrap__list css-umyqv7"
    >
      <button
        className="chakra-button css-17izuiz"
        onClick={[Function]}
        type="button"
      >
        hei
      </button>
      <button
        className="chakra-button css-1qjqcqn"
        onClick={[Function]}
        type="button"
      >
        heihei
      </button>
    </ul>
  </div>
</div>
`;
